--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
 }
 
 body {
@@ -51,6 +52,9 @@ body {
     resize: none;
     padding: 10px;
     border: 1px solid #ccc;
+    font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
+    font-size: 0.8em;
+    line-height: 1.6;
 }
 
 .search-input {
@@ -92,9 +96,11 @@ body {
 
 .resultado-texto {
     white-space: pre-wrap;
-    font-family: monospace;
+    font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
+    font-size: 0.8em;
     padding: 10px;
-    margin-bottom: 10px;  /* Adicionar margem inferior */
+    margin-bottom: 10px;
+    line-height: 1.6;
 }
 
 .btn-inserir {
@@ -147,12 +153,12 @@ body {
 }
 
 .resultado-nome .nome-texto {
-    font-size: 1em;
+    font-size: 0.8em;
     color: #333;
 }
 
 .resultado-nome .tag {
-    font-size: 0.8em;
+    font-size: 0.6em;
     color: #666;
     background-color: #e0e0e0;
     border-radius: 12px;
