--- a/src/styles.css
+++ b/src/styles.css
@@ -16,22 +16,32 @@ body {
     height: 100vh;
 }
 
-.left-panel, .right-panel {
+.left-panel, .editor-panel, .center-panel, .right-panel {
     height: 100%;
     padding: 10px;
 }
 
 .left-panel {
-    width: 50%;
+    width: 30%;
+    min-width: 300px;
+}
+
+.editor-panel {
+    width: 40%;
+    min-width: 400px;
+}
+
+.center-panel {
+    width: 40%;
     min-width: 400px;
 }
 
 .right-panel {
-    width: 50%;
+    width: 30%;
     min-width: 200px;
 }
 
-#resizer {
+#resizer-left, #resizer-right {
     width: 3px;
     height: 100%;
     background-color: #ddd;
@@ -40,8 +50,10 @@ body {
     transition: all 0.2s ease;
 }
 
-#resizer:hover,
-#resizer.dragging {
+#resizer-left:hover,
+#resizer-right:hover,
+#resizer-left.dragging,
+#resizer-right.dragging {
     width: 3px;
     background-color: #999;
 }
