adiciona checklist para busca e apreensão e remove regras de estilo duplicadas

--- a/src/styles.css
+++ b/src/styles.css
@@ -40,9 +40,7 @@ body {
 }
 
 /* Remover definições duplicadas anteriores */
-.right-panel {
-    /* remover width e height daqui pois já estão definidos acima */
-}
+/* .right-panel rule removed as it was empty */
 
 #resizer-left, #resizer-right {
     width: 3px;
