--- a/src/styles.css
+++ b/src/styles.css
@@ -101,14 +101,14 @@ body {
     overflow: hidden;
 }
 
-.resultado-texto-container {
+.resultado-modelo-container {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
     margin-bottom: 60px; /* Espaço para o botão fixo */
 }
 
-.resultado-texto {
+.resultado-modelo {
     white-space: pre-wrap;
     font-family: 'Libre Baskerville', Baskerville, 'Baskerville Old Face', 'Hoefler Text', Garamond, 'Times New Roman', serif;
     font-size: 0.8em;
@@ -166,7 +166,7 @@ body {
     border-left: 4px solid #2196f3;
 }
 
-.resultado-nome .nome-texto {
+.resultado-nome .nome-modelo {
     font-size: 0.8em;
     color: #333;
 }
