--- a/src/styles.css
+++ b/src/styles.css
@@ -305,3 +305,18 @@ body {
     line-height: 1.6;
     text-align: justify;
 }
+
+.resultado-texto-container {
+    flex: 1;
+    overflow-y: auto;
+    padding: 10px;
+    border: 1px solid #eee;
+    border-radius: 4px;
+    margin-bottom: 10px;
+}
+
+.resultado-texto {
+    /*max-height: calc(100vh - 300px); /* Altura máxima considerando outros elementos */
+    overflow-y: auto;
+    padding-right: 10px; /* Espaço para a barra de rolagem */
+}
