--- a/src/styles.css
+++ b/src/styles.css
@@ -180,7 +180,7 @@ body {
 #editor-container {
     grid-row: 2;
     min-height: 50px;
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     border-radius: 4px;
     overflow: auto;
 }
@@ -205,8 +205,8 @@ body {
 .textarea-editor {
     grid-row: 4;
     min-height: 50px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /*border: 1px solid #ccc;
+    border-radius: 4px;*/
     padding: 10px;
     background-color: var(--panel-bg); /* Usando a mesma variável dos painéis */
     overflow-y: auto;
@@ -282,7 +282,7 @@ body {
     left: 0;
     right: 0;
     width: calc(100% menos o padding dos lados);
-    margin: 10px;
+    margin: 10px 10px 0px 10px;
     padding: 10px;
     background-color: var(--btn-bg);
     color: var(--text-primary);
@@ -478,18 +478,16 @@ body {
     background: var(--modelo-btn-hover);
 }
 
+/* Remover estilo específico para o botão "Enviar para o editor" */
+.modelo-action-btn[title="Enviar para o editor"] {
+    /* Remover a regra de cor fixa */
+    color: var(--text-primary);
+}
+
 .modelo-action-btn svg {
     width: 10px;
     height: 10px;
     fill: currentColor;
-}
-
-.modelo-action-btn[title="Enviar para o editor"] {
-    color: #000; /* Mudando a cor para preto */
-}
-
-.modelo-action-btn[title="Enviar para o editor"]:hover {
-    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .nome-modelo, .nome-texto {
@@ -521,7 +519,7 @@ body {
     flex: 1;
     overflow-y: auto;
     padding: 10px;
-    border: 1px solid #eee;
+    border: 0px solid #eee;
     border-radius: 4px;
     /*margin-bottom: 10px;*/
 }
@@ -563,7 +561,7 @@ body {
 #editor-container {
     height: 50%;
     min-height: 100px;
-    border: 1px solid #ccc;
+    border: 0px solid #ccc;
     border-radius: 4px;
     overflow: auto;
     min-height: 50px; /* Altura mínima via CSS */
@@ -590,8 +588,8 @@ body {
 .textarea-editor {
     height: calc(50% - 16px);
     min-height: 100px;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    /*border: 1px solid #ccc;
+    border-radius: 4px;*/
     padding: 10px;
     overflow-y: auto;
     background-color: var(--panel-bg); /* Usando a mesma variável dos painéis */
